update some views

--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,76 +1,80 @@
-<p id="notice"><%= notice %></p>
 <div class="page-content">
   <div class="page-content-col">
     <div class="row">
-      <div class="col-md-5 col-md-offset-1">
-        <h1>Accounts</h1><br>
-        <table>
-          <thead>
-            <tr>
-              <th colspan="1"></th>
-              <th>Name</th>
-              <th>Account type</th>
-              <th>Balance</th>
-            </tr>
-          </thead>
-        
-          <tbody>
-            <% @accounts.each do |account| %>
+      <%= render partial: "pages/navigation" %><br><br>
+      <p id="notice"><%= notice %></p>
+      <div class="col-md-4 col-md-offset-2">
+        <div class="button-list">
+          <h1>Accounts</h1><br>
+          <table>
+            <thead>
               <tr>
-                <td>
-                  <div class="btn-group pull-left">
-                    <button class="btn blue btn-xs btn-outline dropdown-toggle" data-toggle="dropdown">Actions</button>
-                    <ul class="dropdown-menu pull-left">
-                      <li>
-                        <%= link_to account_path(account) do %>
-                            View
-                        <% end %>
-                      </li>
-                      <li>
-                        <%= link_to edit_account_path(account) do %>
-                            Edit
-                        <% end %>
-                      </li>
-                      <li>
-                        <%= link_to account, method: :delete, data: { confirm: 'Are you sure?' } do %>
-                            Delete
-                        <% end %>
-                      </li>
-                    </ul>
-                  </div>
-                </td>
-                <td><%= account.name %></td>
-                <td><%= account.account_type %></td>
-                <td><%= number_to_currency(account.balance.abs) %></td>
+                <th colspan="1"></th>
+                <th>Name</th>
+                <th>Account type</th>
+                <th>Balance</th>
               </tr>
-            <% end %>
-          </tbody>
-        </table><br>
+            </thead>
+          
+            <tbody>
+              <% @accounts.each do |account| %>
+                <tr>
+                  <td>
+                    <div class="btn-group pull-left">
+                      <button class="btn blue btn-xs btn-outline dropdown-toggle" data-toggle="dropdown">Actions</button>
+                      <ul class="dropdown-menu pull-left">
+                        <li>
+                          <%= link_to account_path(account) do %>
+                              View
+                          <% end %>
+                        </li>
+                        <li>
+                          <%= link_to edit_account_path(account) do %>
+                              Edit
+                          <% end %>
+                        </li>
+                        <li>
+                          <%= link_to account, method: :delete, data: { confirm: 'Are you sure?' } do %>
+                              Delete
+                          <% end %>
+                        </li>
+                      </ul>
+                    </div>
+                  </td>
+                  <td><%= account.name %></td>
+                  <td><%= account.account_type %></td>
+                  <td style="text-align:right"><%= number_to_currency(account.balance.abs) %></td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
         <%= link_to 'New Account', new_account_path %> | 
         <%= link_to 'Home', root_path %>
       </div>
-      <div class="col-md-5">
-        <h1>Related Accounts</h1><br>
-        <table>
-          <thead>
-            <tr>
-              <th>Balance</th>
-              <th>Name</th>
-              <th>Account type</th>
-            </tr>
-          </thead>
-        
-          <tbody>
-            <% @related_accounts.each do |account| %>
+      <div class="col-md-4">
+        <div class="button-list">
+          <h1>Related Accounts</h1><br>
+          <table>
+            <thead>
               <tr>
-                <td><%= number_to_currency(account.balance.abs) %></td>
-                <td><%= account.name %></td>
-                <td><%= account.account_type %></td>
+                <th>Balance</th>
+                <th>Name</th>
+                <th>Account type</th>
               </tr>
-            <% end %>
-          </tbody>
-        </table>
-        <br>
+            </thead>
+          
+            <tbody>
+              <% @related_accounts.each do |account| %>
+                <tr>
+                  <td style="text-align:left"><%= number_to_currency(account.balance.abs) %></td>
+                  <td><%= account.name %></td>
+                  <td><%= account.account_type %></td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
   </div>
