--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,11 +2,11 @@
 
 @import "bootstrap";
 
-@mixin box_sizing {
-  -moz-box-sizing:    border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing:         border-box;
-}
+// @mixin box_sizing {
+//   -moz-box-sizing:    border-box;
+//   -webkit-box-sizing: border-box;
+//   box-sizing:         border-box;
+// }
 
 a {
     background-color: none;
@@ -107,9 +107,29 @@ li a.nav {
 
 /* Change the link color on hover */
 li a.nav:hover {
-    background-color: #555;
-    color: white;
+  background-color: #555;
+  color: white;
 }
+
+// @media screen and (max-width: 1050px){
+//   ul.nav {
+//       width:100%;
+//       height:auto;
+//       position:relative;
+//   }
+//   ul.nav li a {
+//       float: left;
+//       padding: 15px;
+//   }
+//   div.content {margin-left:0;}
+// }
+
+// @media screen and (max-width: 400px){
+//   ul.nav li a {
+//       text-align: center;
+//       float: none;
+//   }
+// }
 
 .form {
     width: 100%;
@@ -127,11 +147,11 @@ img {
 
 /* miscellaneous */
 
-.debug_dump {
-  clear: both;
-  // float: left;
-  width: 75%;
-  margin-top: 45px;
-  text-align: center;
-  @include box_sizing;
-}
+// .debug_dump {
+//   clear: both;
+//   // float: left;
+//   width: 75%;
+//   margin-top: 45px;
+//   text-align: center;
+//   @include box_sizing;
+// }
