--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -14,6 +14,7 @@
         </h3>
       <% end %><br>
       <div class="col-md-6 col-md-offset-3">
+        <%= link_to 'New Transaction', new_account_note_path(@account) %> |
         <%= link_to 'Edit Account', edit_account_path(@account) %> |
         <% if @account.account_type == "Cash" %>
           <%= link_to 'Back to Cash Accounts', cash_accounts_path %>
