--- a/app/views/pages/_navigation.html.erb
+++ b/app/views/pages/_navigation.html.erb
@@ -1,6 +1,7 @@
 <ul class="nav">
   <li><a href="#"><%= image_tag 'sunset.jpg', class: "img-circle", size: "150x120" %></a></li><br>
   <li><a href="/" class="nav">Accounts</a></li>
+  <li><a href="/notes" class="nav">Transactions</a></li>
   <li><a href="#" class="nav">Budget</a></li>
   <li><a href="#" class="nav">Spending</a></li>
   <li><a href="/categories" class="nav">Categories</a></li>
