--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -62,6 +62,21 @@ a.button-list:hover {
     color: white;
 }
 
+div.button-list {
+    background-color: #e7e7e7;
+    color: black;
+    font-size: 16px;
+    border-radius: 6px;
+    border: 2px solid #008CBA;
+    width: 100%;
+    display: block;
+    text-decoration: none;
+    padding: 20px 16px;
+    text-align: left;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+}
+
 .datetime select:nth-child(1){
   width: 28%;
   text-indent: 15px;
