--- a/app/assets/stylesheets/notes.scss
+++ b/app/assets/stylesheets/notes.scss
@@ -24,17 +24,17 @@ th {
     height: 50px;
 }
 
-div.button-list {
-    background-color: #e7e7e7;
-    color: black;
-    font-size: 20px;
-    border-radius: 6px;
-    border: 2px solid #008CBA;
-    width: 100%;
-    display: block;
-    text-decoration: none;
-    padding: 20px 16px;
-    text-align: center;
-    -webkit-transition-duration: 0.4s; /* Safari */
-    transition-duration: 0.4s;
-}
+// div.button-list {
+//     background-color: #e7e7e7;
+//     color: black;
+//     font-size: 20px;
+//     border-radius: 6px;
+//     border: 2px solid #008CBA;
+//     width: 100%;
+//     display: block;
+//     text-decoration: none;
+//     padding: 20px 16px;
+//     text-align: center;
+//     -webkit-transition-duration: 0.4s; /* Safari */
+//     transition-duration: 0.4s;
+// }
