--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -4,45 +4,26 @@
       <%= render partial: "pages/navigation" %>
       <p id="notice"><%= notice %></p>
       <h1>Listing Categories</h1>
-      <div class="col-md-6 col-md-offset-3">
+      <div class="col-md-4 col-md-offset-4">
+        <div class="button-list">
         <table>
           <thead>
             <tr>
               <th>Category Name</th>
-              <th colspan="1"></th>
+              <th>Totals</th>
             </tr>
           </thead>
         
           <tbody>
             <% @categories.each do |category| %>
               <tr>
-                <td><%= category.name %></td>
-                <td>
-                  <div class="btn-group pull-right">
-                    <button class="btn blue btn-xs btn-outline dropdown-toggle" data-toggle="dropdown">Actions</button>
-                    <ul class="dropdown-menu pull-right">
-                      <li>
-                        <%= link_to category_path(category) do %>
-                            View
-                        <% end %>
-                      </li>
-                      <li>
-                        <%= link_to edit_category_path(category) do %>
-                            Edit
-                        <% end %>
-                      </li>
-                      <li>
-                        <%= link_to category, method: :delete, data: { confirm: 'Are you sure?' } do %>
-                            Delete
-                        <% end %>
-                      </li>
-                    </ul>
-                  </div>
-                </td>
+                <td><%= link_to "#{category.name}", category %></td>
+                <td></td>
               </tr>
             <% end %>
           </tbody>
-        </table><br>
+        </table>
+        </div>
         <%= link_to 'New Category', new_category_path %>
       </div>
     </div>
