--- a/app/views/accounts/_update_account.html.erb
+++ b/app/views/accounts/_update_account.html.erb
@@ -24,8 +24,12 @@
     <%= f.text_field :balance %>
   </div>
   <div class="field">
-    <%= f.label :principal_balance, 'Balance' %><br>
-    <%= f.text_field :principal_balance %>
+    <%= f.label :minimum_payment %><br>
+    <%= f.text_field :minimum_payment %>
+  </div>
+  <div class="field">
+    <%= f.label :credit_limit %><br>
+    <%= f.text_field :credit_limit %>
   </div>
   <div class="field">
     <%= f.label :apr, 'APR' %><br>
