--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -2,18 +2,21 @@
   <div class="page-content-col">
     <div class="row">
       <%= render partial: "pages/navigation" %>
-      <p id="notice"><%= notice %></p>
+      
       <% if @account.account_type == "Cash" || @account.account_type == "Bank" %>
         <h3><%= "#{@account.name}   Balance: #{number_to_currency(@account.balance)}" %></h3>
       <% elsif @account.account_type == "Credit Card" || @account.account_type == "Bill"  %>
         <h3><%= "#{@account.name}   Minimum Payment: #{number_to_currency(@account.minimum_payment)}" %><br>
             <%= "Due Date: #{@account.due_date.strftime("%m-%d-%Y")}" %><br>
           <% if @account.account_type == "Credit Card" %>
-            <%= "(Current Balance: #{number_to_currency(@account.balance)}--APR: #{number_to_percentage(@account.apr, precision: 2)})" %>
+            <%= "Current Balance: #{number_to_currency(@account.balance)}" %><br>
+            <%= "Credit Limit: #{number_to_currency(@account.credit_limit)}" %><br>
+            <%= "APR: #{number_to_percentage(@account.apr, precision: 2)}" %>
           <% end %>
         </h3>
       <% end %><br>
       <div class="col-md-6 col-md-offset-3">
+        <p id="notice"><%= notice %></p>
         <%= link_to 'New Transaction', new_account_note_path(@account) %> |
         <%= link_to 'Edit Account', edit_account_path(@account) %> |
         <% if @account.account_type == "Cash" %>
