--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -2,9 +2,10 @@
   <div class="page-content-col">
     <div class="row">
       <%= render partial: "pages/navigation" %>
-      <p id="notice"><%= notice %></p>
       <h1>Listing Categories</h1>
       <div class="col-md-4 col-md-offset-4">
+        <p id="notice"><%= notice %></p>
+        <%= link_to 'New Category', new_category_path %>
         <div class="button-list">
         <table>
           <thead>
@@ -24,7 +25,7 @@
           </tbody>
         </table>
         </div>
-        <%= link_to 'New Category', new_category_path %>
+        <%= will_paginate @categories %>
       </div>
     </div>
   </div>
