--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -4,6 +4,8 @@
       <%= render partial: "pages/navigation" %><br><br>
       <p id="notice"><%= notice %></p>
       <div class="col-md-4 col-md-offset-2">
+        <%= link_to 'New Account', new_account_path %> | 
+        <%= link_to 'Home', root_path %>
         <div class="button-list">
           <h1>Accounts</h1><br>
           <table>
@@ -11,7 +13,6 @@
               <tr>
                 <th colspan="1"></th>
                 <th>Name</th>
-                <th>Account type</th>
                 <th>Balance</th>
               </tr>
             </thead>
@@ -42,17 +43,15 @@
                     </div>
                   </td>
                   <td><%= account.name %></td>
-                  <td><%= account.account_type %></td>
                   <td style="text-align:right"><%= number_to_currency(account.balance.abs) %></td>
                 </tr>
               <% end %>
             </tbody>
           </table>
         </div>
-        <%= link_to 'New Account', new_account_path %> | 
-        <%= link_to 'Home', root_path %>
+        <%= will_paginate @accounts %>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4"><br>
         <div class="button-list">
           <h1>Related Accounts</h1><br>
           <table>
@@ -60,7 +59,6 @@
               <tr>
                 <th>Balance</th>
                 <th>Name</th>
-                <th>Account type</th>
               </tr>
             </thead>
           
@@ -69,12 +67,12 @@
                 <tr>
                   <td style="text-align:left"><%= number_to_currency(account.balance.abs) %></td>
                   <td><%= account.name %></td>
-                  <td><%= account.account_type %></td>
                 </tr>
               <% end %>
             </tbody>
           </table>
         </div>
+        <%= will_paginate @related_accounts %>
       </div>
     </div>
   </div>
