--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -22,11 +22,7 @@
             <tbody>
               <% @notes.each do |transaction| %>
                 <tr>
-                  <% if transaction.transaction_date.present? %>
                   <td><%= transaction.transaction_date.strftime("%m-%d-%Y") %></td>
-                  <% else %>
-                  <td><%= transaction.created_at.strftime("%m-%d-%Y") %></td>
-                  <% end %>
                   <td><%= transaction.account.name %></td>
                   <td><%= transaction.explanation %></td>
                   <td><%= link_to "#{number_to_currency(transaction.amount)}", transaction %></td>
@@ -37,6 +33,8 @@
                   <% end %>
                   <% if transaction.category.present? %>
                     <td><%= link_to "#{transaction.category.name}", transaction.category %></td>
+                  <% else %>
+                    <td>None</td>
                   <% end %>
                   <td>
                     <div class="btn-group pull-right">
