--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -11,13 +11,13 @@
           <table class="table">
             <% @notes.each do |transaction| %>
               <tr>
-                <% if transaction.transaction_date.present? %>
-                  <td><%= transaction.transaction_date.strftime("%m-%d-%Y") %></td>
-                <% else %>
-                <td><%= transaction.created_at.strftime("%m-%d-%Y") %></td>
-                <% end %>
+                <td><%= transaction.transaction_date.strftime("%m-%d-%Y") %></td>
                 <td><%= transaction.explanation %></td>
-                <td><%= link_to "#{number_to_currency(transaction.amount)}", transaction %></td>
+                <% if transaction.transaction_type == "Debit" %>
+                  <td><%= link_to "- (#{number_to_currency(transaction.amount)})", transaction %></td>
+                <% else %>
+                  <td><%= link_to "+ #{number_to_currency(transaction.amount)}", transaction %></td>
+                <% end %>
               </tr>
             <% end %>
           </table>
