--- a/app/views/notes/account_transactions.html.erb
+++ b/app/views/notes/account_transactions.html.erb
@@ -4,12 +4,15 @@
     <% @notes.each do |transaction| %>
       <tr>
         <td><%= transaction.transaction_date.strftime("%m-%d-%Y") %></td>
+        <td><%= transaction.id%></td>
         <td><%= transaction.explanation %></td>
-        <%# if transaction.transaction_type == "Debit" %>
-          <!--<td><%#= link_to "-#{number_to_currency(transaction.amount)}", transaction %></td>-->
-        <%# else %>
-          <td><%= link_to "#{number_to_currency(transaction.amount)}", transaction %></td>
-        <%# end %>
+        <td><%= transaction.transaction_type %></td>
+        
+        <% if transaction.transaction_type == "Debit" %>
+          <td><%= link_to "- (#{number_to_currency(transaction.amount)})", transaction %></td>
+        <% else %>
+          <td><%= link_to "+ #{number_to_currency(transaction.amount)}", transaction %></td>
+        <% end %>
       </tr>
     <% end %>
   </table>
