--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -25,7 +25,11 @@
                   <td><%= transaction.transaction_date.strftime("%m-%d-%Y") %></td>
                   <td><%= transaction.account.name %></td>
                   <td><%= transaction.explanation %></td>
-                  <td><%= link_to "#{number_to_currency(transaction.amount)}", transaction %></td>
+                  <% if transaction.transaction_type == "Debit" %>
+                    <td><%= link_to "- (#{number_to_currency(transaction.amount)})", transaction %></td>
+                  <% else %>
+                    <td><%= link_to "+ #{number_to_currency(transaction.amount)}", transaction %></td>
+                  <% end %>
                   <% if transaction.related_account.present? %>
                     <td><%= transaction.related_account.name %></td>
                   <% else %>
