update some views

--- a/app/views/accounts/credit_cards.html.erb
+++ b/app/views/accounts/credit_cards.html.erb
@@ -9,7 +9,7 @@
         <% @credit_cards.each do |account| %>
           <a href="<%= account_path(account) %>" class="button-list" role="button">
             <%= "#{account.name}" %><br>
-            <%= "#{number_to_currency(account.balance.abs)}" %>
+            <%= "Balance: #{number_to_currency(account.balance.abs)}" %>
           </a>
         <% end %>
       </div>
