--- a/app/views/accounts/bills.html.erb
+++ b/app/views/accounts/bills.html.erb
@@ -7,7 +7,7 @@
         <%= link_to 'Back to Accounts', root_path %> |
         <%= link_to 'New Account', new_account_path %>
         <% @bills.each do |account| %>
-          <% if account.due_date <= Date.today.end_of_month && account.due_date >= Date.today.beginning_of_month %>
+          <% if account.due_date.between?(Date.today.beginning_of_month, Date.today.end_of_month) && account.minimum_payment > 0 %>
             <a href="<%= account_path(account) %>" class="button-list" role="button">
               <%= "#{account.name}" %><br>
               <%= "#{number_to_currency(account.minimum_payment.abs)}" %>
@@ -19,10 +19,11 @@
     <h3>Next Months Bills</h3>
     <div class="col-md-6 col-md-offset-3">
       <% @bills.each do |account| %>
-        <% if account.due_date > (Date.today.end_of_month) && account.due_date <= Date.today.end_of_month.months_since(1) %>
+        
+        <% if account.due_date.between?(Date.today.end_of_month + 1, Date.today.end_of_month.months_since(1)) && account.minimum_payment > 0 %>
           <a href="<%= account_path(account) %>" class="button-list" role="button">
             <%= "#{account.name}" %><br>
-            <%= "#{number_to_currency(account.balance.abs)}" %>
+            <%= "#{number_to_currency(account.minimum_payment.abs)}" %>
           </a>
         <% end %>
       <% end %>
