--- a/app/views/accounts/credit_cards.html.erb
+++ b/app/views/accounts/credit_cards.html.erb
@@ -3,6 +3,7 @@
     <div class="row">
       <%= render partial: "pages/navigation" %>
       <h3>Credit Cards</h3>
+      <!--<h4><%#= "Total Ratio: #{@total}" %></h4>-->
       <div class="col-md-6 col-md-offset-3"><br>
         <%= link_to 'Back to Accounts', root_path %> |
         <%= link_to 'New Account', new_account_path %>
