--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,12 +1,6 @@
-@import "bootstrap-sprockets";
-
-@import "bootstrap";
-
-// @mixin box_sizing {
-//   -moz-box-sizing:    border-box;
-//   -webkit-box-sizing: border-box;
-//   box-sizing:         border-box;
-// }
+h1 {
+    text-align: center;
+}
 
 a {
     background-color: none;
@@ -25,15 +19,15 @@ input[type=text]:focus {
     border: 3px solid #555;
 }
 
-input[type=button], input[type=submit], input[type=reset] {
-    background-color: #4CAF50;
-    border: none;
-    color: white;
-    padding: 16px 32px;
-    text-decoration: none;
-    margin: 4px 2px;
-    cursor: pointer;
-}
+// input[type=button], input[type=submit], input[type=reset] {
+//     background-color: #4CAF50;
+//     border: none;
+//     color: white;
+//     padding: 16px 32px;
+//     text-decoration: none;
+//     margin: 4px 2px;
+//     cursor: pointer;
+// }
 
 .my-selector {
     width: 100%;
@@ -101,30 +95,30 @@ div.button-list {
   box-sizing: border-box;
 }
 
-ul.nav {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  width: 200px;
-  background-color: #f1f1f1;
-  height: 100%; /* Full height */
-  position: fixed; /* Make it stick, even on scroll */
-  overflow: auto; /* Enable scrolling if the sidenav has too much content */
-}
+// ul.nav {
+//   list-style-type: none;
+//   margin: 0;
+//   padding: 0;
+//   width: 200px;
+//   background-color: #f1f1f1;
+//   height: 100%; /* Full height */
+//   position: fixed; /* Make it stick, even on scroll */
+//   overflow: auto; /* Enable scrolling if the sidenav has too much content */
+// }
 
-li a.nav {
-  display: block;
-  color: #000;
-  padding: 8px 16px;
-  text-decoration: none;
-  text-align: center;
-}
+// li a.nav {
+//   display: block;
+//   color: #000;
+//   padding: 8px 16px;
+//   text-decoration: none;
+//   text-align: center;
+// }
 
-/* Change the link color on hover */
-li a.nav:hover {
-  background-color: #555;
-  color: white;
-}
+// /* Change the link color on hover */
+// li a.nav:hover {
+//   background-color: #555;
+//   color: white;
+// }
 
 // @media screen and (max-width: 1050px){
 //   ul.nav {
