--- a/app/views/accounts/_form.html.erb
+++ b/app/views/accounts/_form.html.erb
@@ -1,39 +1,45 @@
 <%= form_for(@account) do |f| %>
-  <% if @account.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@account.errors.count, "error") %> prohibited this account from being saved:</h2>
-
-      <ul>
-      <% @account.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+  <%= render 'shared/error_messages', object: f.object %>
+  
+  <div class="form-group">
+    <!--<label for="name">Name:</label>-->
+    <input type="text" name="account[name]" id="name" placeholder="Account Name" class="form-control">
+    <%#= f.label :name %>
+    <%#= f.text_field :name %>
+  </div>
+  <div class="form-group">
+    <select type="text" name="account[account_type]" id="new_account_type" placeholder="Account Type" class="form-control" style="color:#A69999">
+      <option>Account Type</option>
+      <option value="Bank" id="bank">Bank</option>
+      <option value="Cash" id="cash">Cash</option>
+      <option value="Credit" id="credit">Credit Card/Loan</option>
+      <option value="Bill" id="bill">Bill</option>
+    </select>
+  </div>
+  <div class="form-group">
+    <input type="text" name="account[balance]" id="balance" placeholder="Balance" class="form-control">
+    <%#= f.hidden_field :balance, value: 0, class: "form-control" %>
+  </div>
+  <div class="form-group">
+    <input type="text" name="account[minimum_payment]" id="minimum_payment" placeholder="Minimum Payment" class="form-control">
+    <%#= f.hidden_field :minimum_payment, value: 0, class: "form-control" %>
+  </div>
+  <div class="form-group">
+    <input type="text" name="account[credit_limit]" id="credit_limit" placeholder="Credit Limit" class="form-control">
+    <%#= f.label :credit_limit %>
+    <%#= f.text_field :credit_limit %>
+  </div>
+  <div class="form-group">
+    <!--<label for="due_date">Due Date:</label>-->
+    <div class="input-group" id="due_date">
+    <span class="input-group-addon">Due Date: </span>
+    <input type="date" name="account[due_date]" id="due_date" class="form-control">
     </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :account_type %><br>
-    <%= f.select("account_type", ["Bank", "Cash", "Credit Card", "Bill"], {include_blank: '-- Select One --'}, required: true, class: "my-selector") %>
-  </div>
-  <div class="field">
-    <%= f.hidden_field :balance, value: 0 %>
-  </div>
-  <div class="field">
-    <%= f.hidden_field :minimum_payment, value: 0 %>
-  </div>
-  <div class="field">
-    <%= f.label :credit_limit %><br>
-    <%= f.text_field :credit_limit %>
-  </div>
-  <div class="field">
-    <%= f.label :due_date %><br>
-    <span class="datetime"><%= f.date_select :due_date, :default => Date.today, :order => [:day, :month, :year], :start_year => 2017, :end_year => 2022 %></span>
+    <!--<span id="date_label" class="help-block">Due Date</span>-->
+    <%#= f.label :due_date %>
+    <!--<span class="datetime"><%#= f.date_select :due_date, :default => Date.today, :order => [:day, :month, :year], :start_year => 2017, :end_year => 2022 %></span>-->
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Create Account", class: "btn btn-primary" %>
   </div>
 <% end %>
