--- a/app/views/accounts/new.html.erb
+++ b/app/views/accounts/new.html.erb
@@ -1,12 +1,8 @@
-<div class="page-content">
-  <div class="page-content-col">
-    <div class="row">
-      <%= render partial: "pages/navigation" %>
-      <h1>New Account</h1>
-      <div class="col-md-6 col-md-offset-3">
-        <%= render 'form' %>
-        <%= link_to 'Back', accounts_path %>
-      </div>
+<%= render partial: "pages/navigation" %>
+<div class="container-fluid">
+  <h1>New Account</h1>
+    <div class="col-md-4 col-md-offset-4">
+      <%= render 'form' %>
+      <%= link_to 'Back', accounts_path %>
     </div>
-  </div>
 </div>
