--- a/app/views/pages/_navigation.html.erb
+++ b/app/views/pages/_navigation.html.erb
@@ -1,10 +1,45 @@
-<ul class="nav">
-  <li><a href="#"><%= image_tag 'sunset.jpg', class: "img-circle", size: "150x120" %></a></li><br>
-  <li><a href="/" class="nav">Accounts</a></li>
-  <li><a href="/notes" class="nav">Transactions</a></li>
-  <li><a href="#" class="nav">Budget</a></li>
-  <li><a href="#" class="nav">Spending</a></li>
-  <li><a href="/categories" class="nav">Categories</a></li>
-  <li><a href="/logout" data-method="delete" class="nav">Logout</a></li><br>
+<!--<ul class="nav">-->
+<!--  <li><a href="#"><%#= image_tag 'sunset.jpg', class: "img-circle", size: "150x120" %></a></li><br>-->
+<!--  <li><a href="/" class="nav">Accounts</a></li>-->
+<!--  <li><a href="/notes" class="nav">Transactions</a></li>-->
+<!--  <li><a href="#" class="nav">Budget</a></li>-->
+<!--  <li><a href="#" class="nav">Spending</a></li>-->
+<!--  <li><a href="/categories" class="nav">Categories</a></li>-->
+<!--  <li><a href="/logout" data-method="delete" class="nav">Logout</a></li><br>-->
   <!--<li><a href="#"><%#= image_tag 'sky.jpg', class: "img-circle", size: "90x70" %></a></li>-->
-</ul>
+<!--</ul>-->
+
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>                        
+      </button>
+      <a class="navbar-brand" href="#">Money Tracker</a>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav">
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Accounts<span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Cash Accounts</a></li>
+            <li><a href="#">Bank Accounts</a></li>
+            <li><a href="#">Other</a></li>
+          </ul>
+        </li>
+        <li class="active"><a href="/">Transactions</a></li>
+        <li><a href="#">Budget</a></li>
+        <li><a href="#">Spending</a></li>
+        <li><a href="#">Categories</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <!--<li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>-->
+        <li><a href="<%= logout_path %>"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+  
+
